# Carp

./: .gitignore  IDEA.md  README.md  start.sh
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/models/: car.py  user.py
backend/app/routers/: auth.py  dashboard.py  service_plan.py  starline.py
backend/app/services/: auth.py  scheduler.py  starline.py
backend/app/templates/: base.html  dashboard.html  index.html  service_plan.html  setup.html  starline_console.html
backend/app/templates/auth/: login.html  register.html
