[project]
name = "carp"
version = "0.1.0"
description = "Car expense tracking with StarLine integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "jinja2>=3.1.4",
    "httpx>=0.27.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "apscheduler>=3.10.4",
]